# DatalogInterpreterEngine

./: .gitignore  AddAutomaton.h  Automaton.h  CMakeLists.txt  CommentAutomaton.cpp  CommentAutomaton.h  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.h  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MLCommentAutomaton.cpp  MLCommentAutomaton.h  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QMarkAutomaton.cpp  QMarkAutomaton.h  QueriesAutomaton.h  Relation.h  RightParenAutomaton.cpp  RightParenAutomaton.h  Rule.cpp  Rule.h  RulesAutomaton.cpp  (+9 more)
